# Mental-health-companion

./: .gitignore  LICENSE  NOTICE  README.md  SCALING.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.wellness.companion.data.db.WellnessDatabase/: 2.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_bridge.cpp
app/src/main/java/com/wellness/companion/: MainActivity.kt  WellnessApp.kt
app/src/main/java/com/wellness/companion/data/db/: JournalDao.kt  MetricDao.kt  Migrations.kt  MoodDao.kt  NarrativeDao.kt  WellnessDatabase.kt
app/src/main/java/com/wellness/companion/data/db/entities/: EntryKeywords.kt  JournalEntry.kt  MetricEntry.kt  MoodEntry.kt  NarrativeThread.kt  ThreadEntryRef.kt
app/src/main/java/com/wellness/companion/data/llm/: LlamaBridge.kt  LlamaEngine.kt  ModelManager.kt
app/src/main/java/com/wellness/companion/data/repository/: JournalRepository.kt  MetricRepository.kt  MoodRepository.kt
app/src/main/java/com/wellness/companion/di/: AppContainer.kt  ViewModelFactories.kt
app/src/main/java/com/wellness/companion/domain/: Time.kt
app/src/main/java/com/wellness/companion/domain/llm/: LlmEngine.kt  LlmPrompts.kt  ReflectionEngine.kt
app/src/main/java/com/wellness/companion/domain/narrative/: ColdOpenGenerator.kt  MirrorGenerator.kt  ThreadDetector.kt
app/src/main/java/com/wellness/companion/domain/nlp/: TextAnalyzer.kt
app/src/main/java/com/wellness/companion/ui/: WellnessAppRoot.kt  WellnessContentProvider.kt
app/src/main/java/com/wellness/companion/ui/atmosphere/: AtmosphereManager.kt
app/src/main/java/com/wellness/companion/ui/auth/: BiometricGateScreen.kt  BiometricPromptLauncher.kt
app/src/main/java/com/wellness/companion/ui/components/: LiquidAura.kt  MetricBars.kt  MirrorAvatar.kt  MirrorCard.kt  ModelDownloadCard.kt  MoodTrendChart.kt  ReflectionCard.kt  WellnessWheel.kt
app/src/main/java/com/wellness/companion/ui/home/: HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/wellness/companion/ui/insights/: InsightsScreen.kt  InsightsViewModel.kt
app/src/main/java/com/wellness/companion/ui/journal/: JournalEditorScreen.kt  JournalEditorViewModel.kt  JournalListScreen.kt  JournalListViewModel.kt  JournalScreen.kt  ThreadDetailScreen.kt  ThreadDetailViewModel.kt
app/src/main/java/com/wellness/companion/ui/mood/: MoodScreen.kt  MoodViewModel.kt
app/src/main/java/com/wellness/companion/ui/navigation/: WellnessDestinations.kt
app/src/main/java/com/wellness/companion/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  colors_dark.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
ios/: ch1.md  ch2_part1.md  ch2_part2.md  exercises_1.md  exercises_2.md  extract.swift  full_rewrite.md  head.html  katex_header.html  project.yml  strogatz_text.txt  style.css  style_header.html
ios/WellnessCompanion.xcodeproj/: project.pbxproj
ios/WellnessCompanion.xcodeproj/project.xcworkspace/xcuserdata/kip.xcuserdatad/: UserInterfaceState.xcuserstate
ios/WellnessCompanion.xcodeproj/xcuserdata/kip.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/WellnessCompanion/App/: AppContainer.swift  BridgingHeader.h  ContentView.swift  Info.plist  MainTabView.swift  WellnessCompanionApp.swift  WellnessContentProvider.swift
ios/WellnessCompanion/Data/Database/: JournalStore.swift  MetricStore.swift  MoodStore.swift  NarrativeStore.swift  WellnessDatabase.swift
ios/WellnessCompanion/Data/LLM/: LlamaEngine.swift  ModelManager.swift
ios/WellnessCompanion/Domain/Atmosphere/: AtmosphereManager.swift
ios/WellnessCompanion/Domain/LLM/: LlmPrompts.swift  ReflectionEngine.swift
ios/WellnessCompanion/Domain/NLP/: TextAnalyzer.swift
ios/WellnessCompanion/Domain/Narrative/: ColdOpenGenerator.swift  MirrorGenerator.swift  ThreadDetector.swift
ios/WellnessCompanion/UI/Auth/: BiometricGateView.swift
ios/WellnessCompanion/UI/Components/: AnimatedQuoteView.swift  FlowLayout.swift  LiquidAura.swift  MirrorAvatar.swift  MoodTrendChartView.swift
ios/WellnessCompanion/UI/Home/: AppRootView.swift  HomeScreen.swift
ios/WellnessCompanion/UI/Insights/: InsightsScreen.swift
ios/WellnessCompanion/UI/Journal/: JournalEditorScreen.swift  JournalListScreen.swift  LiquidEntryRow.swift  ThreadDetailScreen.swift
ios/WellnessCompanion/UI/Mood/: MoodScreen.swift
ios/WellnessCompanion/UI/Theme/: WellnessTheme.swift
ios/WellnessCompanionTests/: AppContainerTests.swift  LlamaEngineTests.swift
